--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                             <i class="fas fa-times"></i>
                                         </button>
                                     </div>
-                                    <iframe id="ytPlayer" width="100%" height="200" frameborder="0" allowfullscreen></iframe>
+                                    <div id="ytPlayerContainer"></div>
                                 </div>
                             </div>
                         </div>
@@ -344,6 +344,9 @@
     </div>
     
     <audio id="audioElement" preload="auto"></audio>
+    
+    <!-- YouTube Player API -->
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="script.js"></script>
 </body>
 </html>
